[MOBILE] fix issue with overflowing panels

--- a/assets/css/front/responsive/480.styl
+++ b/assets/css/front/responsive/480.styl
@@ -14,6 +14,12 @@
     background $dark-gray
     padding-top 0
 
+  .main-content
+    transition padding .5s
+
+    .{activeBody} &
+      padding-bottom 36em
+
   .hw-main-title
     position relative; z-index 2
     padding-bottom .5em
